tests/invariants/pass/type_constraints_env.act
constructor of AllEnvVars
interface constructor()

creates
	uint value := CALLVALUE

invariants
	value >= 0
