tests/invariants/fail/constructor_self_reference.act
constructor of LValue
interface constructor()

creates

    uint x := x

invariants

    x == 0
